--- a/homecss.css
+++ b/homecss.css
@@ -1,91 +1,149 @@
-*{
-    margin:0;
-    padding:0;
+* {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
-html{
-    font-size:62.5%;
+
+html {
+    font-size: 62.5%;
 }
-body{
-    width:100vw;
-    height:100vh;
+
+.home-section {
+    height: 200vh;
 }
-header nav{
-    background-color:#E0F1DB;
-    display:flex;
-    height:9rem;
-}
-header nav .logo{
+
+header nav {
+    background-color: #E0F1DB;
     display: flex;
-    width: 122px;
-    height: 9rem;
-    justify-content: flex-start;
+    height: 6rem;
+}
+
+header nav .logo {
+    display: flex;
+    width: 110px;
+    height: 6rem;
+    /* justify-content: flex-start; */
     align-items: center;
+    margin-left: 2em;
 }
-.logo img{
-    width:75%;
-    height:75%;
+
+.logo img {
+    width: 100%;
+    height: 100%;
 }
-header nav ul{
-    width:100%;
-    display:flex;
-    gap:1rem;
+
+.navc {
+    display: flex;
     justify-content: space-between;
-     align-items: center; 
 }
-.list{
-    flex:1;
-    border:1px solid black;
-    border-radius: 5px;
-    height:4rem;
-    line-height: 4rem;
+
+header nav ul {
+    display: flex;
+    gap: 4rem;
+    justify-content: end;
+    align-items: center;
+    margin-right: 5em;
+
+}
+
+.list {
+    
     list-style-type: none;
     text-align: center;
-    background-color: black;
+    position: relative;
 }
- .list.a{
-    background-color: white;
 
-}
-.a a{
-    color:black;
-}
-.link{
+
+.link {
     text-decoration: none;
-    font-size: 3rem;
-    color:white;
-}
-footer{
-    width:100%;
-    height:20rem;
-}
-footer .box{
-    width:100%;
-    height:20rem;
-    background-color: black;
-} 
-/* default content over */
-
-main{
-    background-image: url(images/home.png);
-    padding:2rem 0; 
-}
-main .con{
-    height:400px;
-    width:90%;
-    margin:0 auto;
+    font-size: 2.5rem;
+    color:forestgreen;
+    font-weight: bold;
     
 }
-.al{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 355px;
-    height: 5rem;
-    padding: 10px;
-    border-radius: 18px;
-    background: #EED0AC;
+.link::after{
+   
+      content: '';
+      position: absolute;
+      width:0; 
+      height: 3px;
+      display: block;
+      background:forestgreen;
+      transition: width .2s ease;
+    
 }
-main .con .head{
+.link:hover:after{
+    width: 50%;
+    left: 0;
+    height: 3px;
+}
+
+footer {
+    width: 100%;
+    height: 20rem;
+}
+
+footer .box {
+    width: 100%;
+    height: 20rem;
+    background-color: black;
+}
+.active{
+    color:darkorange;
+    font-weight: bold;
+    
+}
+/* default content over */
+
+/* main {
+    background-image: url(images/train.jpg);
+    padding: 2rem 0;
+} */
+main{
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.bac-image{
+    height: 100vh;
+    width: 100%;
+    /* opacity: 0.5; */
+    position: absolute;
+    z-index: 2;
+}
+.overlay{
+    width: 100%;
+    height: 100vh;
+    background-color: black;
+    opacity: 0.8;
+    position: absolute;
+    z-index: 5;
+
+}
+.content{
+    position:absolute;
+    width: 60%;
+    height: 60%;
+    z-index: 10;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.h-title{
     font-size: 2.5rem;
+    color:ivory;
+    font-weight: bold;
+}
+.catchy-line{
+    font-size: 3rem;
+    color:greenyellow;
+}
+.abstract{
+    margin-top: 1em;
+    font-size: 2rem;
+    color:burlywood;
 }
