--- a/logstyle.css
+++ b/logstyle.css
@@ -6,6 +6,10 @@
 html{
     font-size: 62.5%;
 }
+.login{
+    text-decoration: none;
+    color: white;
+}
 .box{
     width:100vw;
     height:100vh;
