--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
 html{
     font-size: 62.5%;
 }
+.signup{
+    text-decoration: none;
+    color:white ;
+}
 .box{
     width:100vw;
     height:100vh;
